--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Title: Reccomends songs to users and summarizes Spotify trends
 Version: 0.0.0.9000
 Authors@R: 
     person("Kathleen", "Bacigalupi", , "first.last@example.com", role = c("aut", "cre"))
+    person("Melanie", "Wells", , "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
