Writing summary of song function, adding print statement to song reccomendor, testing playlist function, changed readme slightly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(print,playlist)
 S3method(print,song)
-S3method(summary,Song)
+S3method(summary,song)
 export(rec_playlist)
 export(rec_song)
 importFrom(dplyr,filter)
