Taking out imports we don't need, changes namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(rec_playlist)
 export(rec_song)
 importFrom(dplyr,filter)
 importFrom(dplyr,sample_n)
-importFrom(purrr,map_vec)
-importFrom(purrr,modify_if)
+importFrom(purrr,map)
 importFrom(spotifyr,get_artist_audio_features)
 importFrom(spotifyr,get_genre_artists)
