--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(dplyr,sample_n)
 importFrom(purrr,map)
 importFrom(spotifyr,get_artist_audio_features)
 importFrom(spotifyr,get_genre_artists)
+importFrom(spotifyr,get_spotify_access_token)
