--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,11 @@ Authors@R:
     person("Kathleen", "Bacigalupi", , "first.last@example.com", role = c("aut", "cre"))
     person("Melanie", "Wells", , "first.last@example.com", role = c("aut", "cre"))
 Description: An R package that allows users to generate a recommended song or playlist based on their inputs.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Imports: 
-    dplyr,
-    purrr,
-    spotifyr
+Imports:
 Depends: 
     R (>= 2.10), dplyr, purrr, spotifyr
 LazyData: true
