--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports:
+    dplyr,
+    purrr,
+    spotifyr
 Depends: 
-    R (>= 2.10), dplyr, purrr, spotifyr
+    R (>= 2.10)
 LazyData: true
 Suggests: 
     knitr,
